--- a/Duvida Alunos/home.css
+++ b/Duvida Alunos/home.css
@@ -1,25 +1,26 @@
 .container {
-    margin-top: 1rem;
+    margin-top: 2rem;
     display: block;
 }
 
 
 
 .header {
-    background-color: #5AAAD9;
+    background-image: url("https://ssl.gstatic.com/support/content/images/static/homepage_header_background_v2.svg");
+    background-color: #3C5AA9;
+    background-repeat: no-repeat;
+    background-position: bottom;
     color: white;
-    padding: 35px 0;
+    padding: 70px 0;
     margin-bottom: 7px;
-    -webkit-box-flex: 0;
-    -ms-flex: none;
     flex: none;
     position: relative;
     z-index: 10;
-    background-size: cover;
-    -webkit-box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+    height: 30.0625rem;
 
 }
+
 #duvida {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
@@ -30,6 +31,13 @@
 @media only screen and (max-width: 600px) {
     #duvida {
         font-size: 18px;
+    }
+
+    .voce {
+        font-size: 18px;
+    }
+    .header{
+        background-position: left bottom;
     }
 }
 
@@ -100,7 +108,7 @@ a:hover {
 }
 
 .titulo {
-    color: #5aaad9;
+    color: #3C5AA9;
     margin-top: 2rem;
     font-family:"proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -119,9 +127,11 @@ a:hover {
     outline: none;
     border: none;
     width: 100%;
-    padding: 1.25rem 1.75rem;
-    background: rgba(255, 255, 255, 0.5);
+    padding: 1.25rem 2.5rem;
+    background: rgba(255, 255, 255, 0.7);
     border-radius: 4px;
+    margin: 0 auto;
+    box-shadow: 0px 4px 12px rgba(30, 30, 30, 0.2);
 
 
 
