--- a/Home principal/faq.css
+++ b/Home principal/faq.css
@@ -1,22 +1,22 @@
 .container {
-    margin-top: 1rem;
+    margin-top: 2rem;
     display: block;
 }
 
 
 .header {
-    background-color: #5AAAD9;
+    background-image: url("https://ssl.gstatic.com/support/content/images/static/homepage_header_background_v2.svg");
+    background-color: #3C5AA9;
+    background-repeat: no-repeat;
+    background-position: bottom;
     color: white;
-    padding: 35px 0;
+    padding: 70px 0;
     margin-bottom: 7px;
-    -webkit-box-flex: 0;
-    -ms-flex: none;
     flex: none;
     position: relative;
     z-index: 10;
-    background-size: cover;
-    -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2);
+    height: 30.0625rem;
 
 }
 
@@ -26,6 +26,7 @@
     font-weight: normal;
     font-size: 25px;
     line-height: 20px;
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -36,12 +37,17 @@
     .voce {
         font-size: 18px;
     }
+    .header{
+        background-position: left bottom;
+    }
 }
 
 .voce {
-    font-size: 22px;
+    font-size: 26px;
     color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -50,7 +56,6 @@
         font-size: 18px;
     }
 }
-
 
 #icone {
 
@@ -78,7 +83,8 @@
 
 #card:hover {
     box-shadow: 0px 4px 12px rgba(30, 30, 30, 0.2);
-    transform: translateX(6px);
+    transform: translateX(5px);
+    background-color: #afc3f6;
 }
 
 #icone3 {
@@ -122,8 +128,8 @@ a:hover {
 }
 
 .titulo {
-    color: #5aaad9;
-    margin-top: 2rem;
+    color: #3C5AA9;
+    margin-top: 1.5rem;
     font-family:"proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -142,9 +148,12 @@ a:hover {
     outline: none;
     border: none;
     width: 100%;
-    padding: 1.25rem 1.75rem;
-    background: rgba(255, 255, 255, 0.5);
+    padding: 1.25rem 2.5rem;
+    background: rgba(255, 255, 255, 0.7);
     border-radius: 4px;
+    margin: 0 auto;
+    box-shadow: 0px 4px 12px rgba(30, 30, 30, 0.2);
+
 
 
 }
@@ -182,7 +191,7 @@ span {
 }
 
 #btn {
-    background-color: #5AAAD9;
+    background-color: #3C5AA9;
     border: none;
     border-radius: 4px;
 
@@ -191,3 +200,4 @@ span {
 #btn:hover {
     background-color: #1b75ae;
 }
+
